[package]
name = "symbolic"
version = "0.1.0"
authors = ["Øystein Hovind <oystein.hovind@folq.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aljabar = { git = "https://github.com/hovind/aljabar", branch = "indexed_map" }
