[package]
name = "symbolic"
version = "0.1.0"
authors = ["Øystein Hovind <oystein.hovind@folq.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { git = "https://github.com/hovind/num-traits", branch = "clone-over-copy" }
